--- a/package.json
+++ b/package.json
@@ -22,7 +22,13 @@
   },
   "homepage": "https://github.com/Motawala/crs#readme",
   "dependencies": {
-    "express": "^4.19.2"
+    "body-parser": "^1.20.2",
+    "consolidate": "^1.0.3",
+    "express": "^4.19.2",
+    "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.9.7",
+    "swig": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
