--- a/package.json
+++ b/package.json
@@ -22,10 +22,14 @@
   },
   "homepage": "https://github.com/Motawala/crs#readme",
   "dependencies": {
+    "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "connect-mysql": "^4.0.0",
     "consolidate": "^1.0.3",
+    "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
+    "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
