--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "fs": "^0.0.1-security",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "swig": "^1.4.2"
   },
   "devDependencies": {
