--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "connect-mysql": "^4.0.0",
     "consolidate": "^1.0.3",
     "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "fs": "^0.0.1-security",
