--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Motawala/crs#readme",
   "dependencies": {
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@sendgrid/mail": "^8.1.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
@@ -39,6 +40,7 @@
     "swig": "^1.4.2"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.55.9",
     "nodemon": "^3.1.0"
   }
 }
